--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,9 +1,14 @@
 {
-	"tasks": {
-		"dev": "deno run --watch main.ts",
-		"migrate": "postgrator migrate --driver sqlite3"
-	},
-	"imports": {
-		"@std/assert": "jsr:@std/assert@1"
-	}
+  "tasks": {
+    "dev": "deno run --watch main.ts",
+    "migrate": "postgrator migrate --driver sqlite3"
+  },
+  "imports": {
+    "@std/assert": "jsr:@std/assert@1"
+  },
+  "fmt": {
+    "options": {
+      "semiColons": false
+    }
+  }
 }
