FInally get sqlite working with migrations.

--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,10 +1,13 @@
 {
   "tasks": {
     "dev": "deno run --watch main.ts",
-    "migrate": "postgrator migrate --driver sqlite3"
+    "migrate": "deno run migrate.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@gordonb/sqlite-migrate": "jsr:@gordonb/sqlite-migrate@^0.1.0",
+    "@std/assert": "jsr:@std/assert@1",
+    "@types/node": "npm:@types/node@^24.2.0",
+    "graphql-yoga": "npm:graphql-yoga@^5.15.1"
   },
   "fmt": {
     "options": {
