--- a/backend/deno.json
+++ b/backend/deno.json
@@ -7,7 +7,9 @@
     "@gordonb/sqlite-migrate": "jsr:@gordonb/sqlite-migrate@^0.1.0",
     "@std/assert": "jsr:@std/assert@1",
     "@types/node": "npm:@types/node@^24.2.0",
-    "graphql-yoga": "npm:graphql-yoga@^5.15.1"
+    "@whatwg-node/server-plugin-cookies": "npm:@whatwg-node/server-plugin-cookies@^1.0.5",
+    "graphql-yoga": "npm:graphql-yoga@^5.15.1",
+    "notifications-node-client": "npm:notifications-node-client@^8.2.1"
   },
   "fmt": {
     "options": {
