--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "dev": "deno run --watch main.ts",
-    "migrate": "deno run migrate.ts"
+    "migrate": "deno run --env-file=.env migrate.ts"
   },
   "imports": {
     "@gordonb/sqlite-migrate": "jsr:@gordonb/sqlite-migrate@^0.1.0",
