Fix directory permissions blocking sqlite writes
This commit moves the sqlite database into a directory that we can
easily control the permissions of and gives read/write to deno for that
file.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM denoland/deno:alpine-2.4.5
+ARG DB_PATH
 # run as nonroot user
 USER deno
 WORKDIR /app
-COPY . .
+COPY --chown=deno:deno . .
 ENTRYPOINT ["/bin/deno"]
-CMD ["run", "--allow-write=./seizures.db", "--allow-read=./seizures.db",  "--allow-env", "--allow-net", "--unstable-temporal", "main.ts" ]
+CMD ["run", "--allow-read=/app/data/seizures.db", "--allow-write=/app/data/seizures.db", "--allow-env", "--allow-net", "--unstable-temporal", "main.ts" ]
