--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,19 +13,19 @@ services:
     ports:
       - "3000:3000"
       - "3001:3001"
-  backend:
-    build: ./backend
-    env_file: ./backend/.env
+  api:
+    build: ./api
+    env_file: ./api/.env
     ports:
       - 3000
     expose:
       - 3000
     volumes:
     - type: bind
-      source: ./backend
-      target: /backend
-  frontend:
-    build: ./frontend
+      source: ./api
+      target: /api
+  ui:
+    build: ./ui
     ports:
       - 3000
     expose:
@@ -33,7 +33,7 @@ services:
     command: npm run dev
     volumes:
       - type: bind
-        source: ./frontend
-        target: /frontend
+        source: ./ui
+        target: /ui
 volumes:
   driver: {}
