--- a/ui/package.json
+++ b/ui/package.json
@@ -8,18 +8,24 @@
     "check": "biome check --write",
     "dev": "rsbuild dev",
     "format": "biome format --write",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "extract": "lingui extract",
+    "compile": "lingui compile"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "@lingui/core": "^5.4.1",
+    "@lingui/react": "^5.4.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
-    "@rsbuild/core": "^1.4.3",
-    "@rsbuild/plugin-react": "^1.3.3",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "typescript": "^5.8.3"
+    "@lingui/cli": "^5.4.1",
+    "@lingui/swc-plugin": "^5.6.1",
+    "@rsbuild/core": "^1.5.3",
+    "@rsbuild/plugin-react": "^1.4.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "typescript": "^5.9.2"
   }
 }
