--- a/api/deno.json
+++ b/api/deno.json
@@ -5,9 +5,10 @@
   },
   "imports": {
     "@gordonb/sqlite-migrate": "jsr:@gordonb/sqlite-migrate@^0.1.0",
-    "@std/assert": "jsr:@std/assert@1",
-    "@types/node": "npm:@types/node@^24.2.0",
+    "@std/assert": "jsr:@std/assert@^1.0.14",
+    "@types/node": "npm:@types/node@^24.3.0",
     "@whatwg-node/server-plugin-cookies": "npm:@whatwg-node/server-plugin-cookies@^1.0.5",
+    "graphql-scalars": "npm:graphql-scalars@^1.24.2",
     "graphql-yoga": "npm:graphql-yoga@^5.15.1",
     "notifications-node-client": "npm:notifications-node-client@^8.2.1"
   },
