--- a/ui/package.json
+++ b/ui/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "build": "rsbuild build",
     "check": "biome check --write",
-    "dev": "rsbuild dev",
+    "dev": "concurrently 'npm run dev:*'",
+    "dev:rsbuild": "rsbuild dev",
+    "dev:css": "panda --watch",
     "format": "biome format --write",
     "preview": "rsbuild preview",
     "extract": "lingui extract",
-    "compile": "lingui compile"
+    "compile": "lingui compile",
+    "panda:init": "panda init --postcss"
   },
   "dependencies": {
     "@lingui/core": "^5.4.1",
@@ -22,10 +25,12 @@
     "@biomejs/biome": "2.0.6",
     "@lingui/cli": "^5.4.1",
     "@lingui/swc-plugin": "^5.6.1",
+    "@pandacss/dev": "^1.2.0",
     "@rsbuild/core": "^1.5.3",
     "@rsbuild/plugin-react": "^1.4.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "concurrently": "^9.2.1",
     "typescript": "^5.9.2"
   }
 }
