--- a/ui/package.json
+++ b/ui/package.json
@@ -22,11 +22,11 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.0.6",
+    "@biomejs/biome": "^2.0.6",
     "@lingui/cli": "^5.4.1",
     "@lingui/swc-plugin": "^5.6.1",
     "@pandacss/dev": "^1.2.0",
-    "@rsbuild/core": "^1.5.3",
+    "@rsbuild/core": "^1.5.4",
     "@rsbuild/plugin-react": "^1.4.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
