Get basic layout and routing working for ui
This commit adds React Router (in Data Mode) to
the project.

The previous version (fp3) was build with React Router
in Framework mode, which it turns out is architecturally
problematic. It's a monolithic fullstack framework,
where the api and ui are tightly coupled and generated
(along with the code that lets them communicate) from
the same set of file.

This rewrite establishes the api and ui as clear and
totally separate entities, but uses data mode in the UI
for routing and data fetching from the API.

--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,7 @@
     "dev:css": "panda --watch",
     "format": "biome format --write",
     "preview": "rsbuild preview",
-    "extract": "lingui extract",
+    "extract": "lingui extract --clean",
     "compile": "lingui compile",
     "panda:init": "panda init --postcss"
   },
@@ -19,7 +19,8 @@
     "@lingui/core": "^5.4.1",
     "@lingui/react": "^5.4.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router": "^7.8.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.6",
