--- a/api/deno.json
+++ b/api/deno.json
@@ -12,6 +12,7 @@
     "graphql-yoga": "npm:graphql-yoga@^5.15.1",
     "notifications-node-client": "npm:notifications-node-client@^8.2.1"
   },
+  "unstable": ["temporal"],
   "fmt": {
     "options": {
       "semiColons": false
