--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine
 
 RUN apk add --update nodejs npm
-COPY . .
+WORKDIR /app/ui
+COPY --chown=nonroot:nonroot . .
 RUN npm install --ci
 CMD ["npm", "run", "dev"]
 
