--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,8 @@
 FROM denoland/deno:alpine-2.4.5
 ARG DB_PATH
-# run as nonroot user
+# run as a nonroot user
 USER deno
-WORKDIR /app
+WORKDIR /app/api
 COPY --chown=deno:deno . .
 ENTRYPOINT ["/bin/deno"]
-CMD ["run", "--allow-read=/app/data/seizures.db", "--allow-write=/app/data/seizures.db", "--allow-env", "--allow-net", "--unstable-temporal", "main.ts" ]
+CMD ["run", "--allow-read=/app/api/data/seizures.db", "--allow-write=/app/api/data/seizures.db", "--allow-env", "--allow-net", "--unstable-temporal", "main.ts" ]
