--- a/api/deno.json
+++ b/api/deno.json
@@ -7,8 +7,11 @@
     "@gordonb/sqlite-migrate": "jsr:@gordonb/sqlite-migrate@^0.1.0",
     "@std/assert": "jsr:@std/assert@^1.0.15",
     "@std/testing": "jsr:@std/testing@^1.0.16",
+    "@std/ulid": "jsr:@std/ulid@^1.0.0",
     "@types/node": "npm:@types/node@^24.9.2",
     "@whatwg-node/server-plugin-cookies": "npm:@whatwg-node/server-plugin-cookies@^1.0.5",
+    "graphql": "npm:graphql@^16.11.0",
+    "graphql-rate-limit-directive": "npm:graphql-rate-limit-directive@^2.0.6",
     "graphql-scalars": "npm:graphql-scalars@^1.25.0",
     "graphql-yoga": "npm:graphql-yoga@^5.16.0",
     "jose": "npm:jose@6.1.0",
