--- a/api/deno.json
+++ b/api/deno.json
@@ -6,6 +6,7 @@
   "imports": {
     "@gordonb/sqlite-migrate": "jsr:@gordonb/sqlite-migrate@^0.1.0",
     "@std/assert": "jsr:@std/assert@^1.0.15",
+    "@std/expect": "jsr:@std/expect@^1.0.17",
     "@std/testing": "jsr:@std/testing@^1.0.16",
     "@std/ulid": "jsr:@std/ulid@^1.0.0",
     "@types/node": "npm:@types/node@^24.9.2",
