--- a/api/deno.json
+++ b/api/deno.json
@@ -8,6 +8,7 @@
     "@std/assert": "jsr:@std/assert@^1.0.15",
     "@std/expect": "jsr:@std/expect@^1.0.17",
     "@std/testing": "jsr:@std/testing@^1.0.16",
+    "@std/testing/bdd": "jsr:@std/testing@^1.0.16/bdd",
     "@std/ulid": "jsr:@std/ulid@^1.0.0",
     "@types/node": "npm:@types/node@^24.9.2",
     "@whatwg-node/cookie-store": "npm:@whatwg-node/cookie-store@^0.2.3",
