--- a/api/deno.json
+++ b/api/deno.json
@@ -14,11 +14,11 @@
     "@whatwg-node/cookie-store": "npm:@whatwg-node/cookie-store@^0.2.3",
     "@whatwg-node/server-plugin-cookies": "npm:@whatwg-node/server-plugin-cookies@^1.0.5",
     "graphql": "npm:graphql@^16.11.0",
-    "graphql-rate-limit-directive": "npm:graphql-rate-limit-directive@^2.0.6",
     "graphql-scalars": "npm:graphql-scalars@^1.25.0",
     "graphql-yoga": "npm:graphql-yoga@^5.16.0",
     "jose": "npm:jose@^6.1.0",
-    "notifications-node-client": "npm:notifications-node-client@^8.2.1"
+    "notifications-node-client": "npm:notifications-node-client@^8.2.1",
+    "rate-limiter-flexible": "npm:rate-limiter-flexible@^8.2.0"
   },
   "unstable": ["temporal"],
   "fmt": {
