--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "@lingui/babel-plugin-lingui-macro": "^5.6.0",
     "@lingui/core": "^5.6.0",
     "@lingui/react": "^5.6.0",
+    "@rsbuild/core": "1.5.17",
     "react": "^19.1.1",
     "react-aria-components": "^1.13.0",
     "react-dom": "^19.1.1",
@@ -31,7 +32,6 @@
     "@lingui/cli": "^5.6.0",
     "@lingui/swc-plugin": "^5.6.1",
     "@pandacss/dev": "^1.2.0",
-    "@rsbuild/core": "^1.5.17",
     "@rsbuild/plugin-react": "^1.4.2",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
