api: rework docker config
This commit creates a proper production image and simplifies the docker
compose setup so it's clearly a dev oriented configuration. We're also
switching to use Deno's new permissions config... moving permissions
from command line arguments in the docker file to the deno.json file.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,16 @@
-FROM denoland/deno:alpine-2.5.6
-ARG DB_PATH
-# run as a nonroot user
-USER deno
-WORKDIR /app/api
+FROM denoland/deno:latest AS builder
+WORKDIR /app
 COPY --chown=deno:deno . .
-ENTRYPOINT ["/bin/deno"]
-CMD ["run", "--allow-read=/app/api/data/seizures.db", "--allow-read=/app/api/schema.graphql", "--allow-write=/app/api/data/seizures.db", "--allow-env", "--allow-net", "--unstable-temporal", "main.ts" ]
+RUN deno compile -A --include=./schema.graphql --output api main.ts
+
+# https://github.com/GoogleContainerTools/distroless
+FROM gcr.io/distroless/cc
+WORKDIR /home/nonroot
+# And now the app:
+COPY --from=builder --chown=nonroot:nobody /app/api .
+COPY --from=builder --chown=nonroot:nobody /app/schema.graphql .
+COPY --from=builder --chown=nonroot:nobody /app/data/seizures.db data/seizures.db
+
+# Run as a non-root user
+USER nonroot
+CMD ["./api"]
