ui: rework dockerfile for production
Now that the dev use case is handled by docker-compose this commit
reworks the dockerfile to focus on production. The new dockerfile uses
the memory safe Caddy server to serve the static files needed for the
ui.

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,6 +1,26 @@
-FROM denoland/deno:ubuntu-2.5.6
-# run as a nonroot user
-USER deno
-WORKDIR /app/ui
+FROM denoland/deno:latest AS deno
+WORKDIR /app
 COPY --chown=deno:deno . .
-ENTRYPOINT ["/bin/deno"]
+RUN deno task build
+
+FROM alpine
+
+RUN apk add --no-cache \
+	ca-certificates \
+	libcap \
+	mailcap \
+  caddy
+
+# Create a group and a user without a password
+RUN addgroup -g 1000 nonroot && \
+    adduser -u 1000 -S -G nonroot -D nonroot --disabled-password --gecos ""
+
+WORKDIR /home/nonroot
+# And now the app:
+COPY --from=deno --chown=nonroot:nonroot /app/dist .
+
+EXPOSE 3000
+# Run as a non-root user
+USER nonroot
+CMD ["caddy", "file-server", "--listen", ":3000",  "--root", "/home/nonroot/"]
+
